--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-§¨§Û§–§√§∆§ƒ§Ø§Î§æ°™
+<!doctype html>
+<html lang="ja">
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+		<title></title>
+	</head>
+	<div class="topbar">
+		<div class="fill">
+			<div class="container">
+				<a class="brand desabled" href="/">Hixi apps</a>
+				<ul class="nav">
+					<li><a href="http://app.hixi-hyi.com/"> Application </a></li>
+					<li><a href="https://github.com/"> Git </a></li>
+				</ul>
+				<div class="pull-right">
+					<ul class="nav">
+						<li><a href="http://www.hixi-hyi.com/">„Å∂„Çç„Åê„Å∏</a><li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<body>
+		<div class="container">
+			<div class="content">
+				<div class="page-header">
+					<h1> TwitterWordCountProgram <small>„Å§„Å∂„ÇÑ„ÅçËß£Êûê</small></h1>
+				</div>
+				<div class="row">
+					<div class="span10">
+					</div>
+				</div>
+			</div>
+			<footer>
+			<p>Copyright &copy; Hiroyoshi HOUCHI ( <a href="http://twitter.com/#!/hixi_hyi/">@hixi_hyi</a> ) All Right Reserved.</p>
+			</footer>
+		</div>
+	</body>
+</html>
