--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="content">
 				<div class="page-header">
-					<h1> TwitterWordCountProgram <small>つぶやき解析</small></h1>
+					<h1> 自己紹介 </h1>
 				</div>
 				<div class="row">
 					<div class="span10">
