--- a/index.html
+++ b/index.html
@@ -3,35 +3,95 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+		<link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" />
 		<title></title>
+		<style type="text/css">
+			body {
+				padding-top: 60px;
+				padding-bottom: 40px;
+			}
+			.sidebar-nav {
+				padding: 9px 0;
+			}
+		</style>
 	</head>
-	<div class="topbar">
-		<div class="fill">
-			<div class="container">
-				<a class="brand desabled" href="/">Hixi apps</a>
-				<ul class="nav">
-					<li><a href="http://app.hixi-hyi.com/"> Application </a></li>
-					<li><a href="https://github.com/"> Git </a></li>
-				</ul>
-				<div class="pull-right">
-					<ul class="nav">
-						<li><a href="http://www.hixi-hyi.com/">ぶろぐへ</a><li>
-					</ul>
+	<body>
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container-fluid">
+					<a class="brand" href="#">Hixi Introduction</a>
+					<div class="nav-collapse">
+						<ul class="nav">
+							<li><a href="http://app.hixi-hyi.com/"> Application </a></li>
+							<li><a href="https://github.com/"> Github </a></li>
+							<li><a href="http://www.facebook.com/hiroyoshi.houchi"> Facebook </a></li>
+							<li><a href="https://twitter.com/#!/hixi_hyi"> Twitter </a></li>
+						</ul>
+					</div>
+					<div class="pull-right">
+						<ul class="nav">
+							<li><a href="http://www.hixi-hyi.com/">ぶろぐへ</a><li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<body>
 		<div class="container">
 			<div class="content">
 				<div class="page-header">
-					<h1> 自己紹介 </h1>
+					<h1>自己紹介</h1>
 				</div>
-				<div class="row">
-					<div class="span10">
+				<!-- line1 -->
+				<div class="row-fluid">
+					<div class="span5">
+						<div class="well">
+							<h2>略歴</h2>
+							<ul>
+								<li> 富山商船高等専門学校 情報工学科 </li>
+								<li> 豊橋技術科学大学 知識情報工学過程 </li>
+								<li> 電気通信大学大学院 情報システム学研究科 情報ネットワークシステム学専攻 </li>
+								<li> ... </li>
+							</ul>
+						</div>
+					</div>
+					<div class="span5">
+						<div class="well">
+							<h2>主著研究</h2>
+							<ul>
+								<li>(高専)プログラミング初学者のためのアルゴリズム学習支援システム</li>
+								<li>(大学)Wikipediaのカテゴリ階層を利用したTwitterユーザのカテゴライズ手法 </li>
+								<li>(大学院)ネットワークコンピューティングのための包括的マッシュアップフレームワークの検討</li>
+							</ul>
+						</div>
 					</div>
 				</div>
+
+				<div class="row-fluid">
+					<div class="span5">
+						<div class="well">
+							<h2>アプリケーション</h2>
+							<ul>
+								<li><a href="http://app.hixi-hyi.com/wordcount/">twiwc</a> </li>
+								<li><a href="ihttps://github.com/hixi-hyi/ppopupmenu">ppopupmenu</a> <br/ > [<a href="http://www.amazon.co.jp/dp/4274211746">ARプログラミングProcessingでつくる拡張現実感のレシピ</a> 掲載]</li>
+								<li><a href="http://www.youtube.com/watch?v=4SQ9mmuzttA">こまったー</a> <br/ >[<a href="http://info.cookpad.com/24contest2">第2回 開発コンテスト24</a>] 
+							</ul>
+
+						</div>
+					</div>
+					<div class="span5">
+						<div class="well">
+							<h2>共著研究</h2>
+							<ul>
+								<li>(大学院) 関連データ先読みとスマートフォンの消費電力に関する研究</li>
+								<li>(大学院) 光学シースルー方式HMDとマーカレス画像認識による高可搬性実世界志向インターフェース</li>
+							</ul>
+
+						</div>
+					</div>
+				</div>
+
+
 			</div>
 			<footer>
 			<p>Copyright &copy; Hiroyoshi HOUCHI ( <a href="http://twitter.com/#!/hixi_hyi/">@hixi_hyi</a> ) All Right Reserved.</p>
