--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="content">
 				<div class="page-header">
-					<h1>自己紹介</h1>
+					<h1>自己紹介</h1><img src="http://profile.ak.fbcdn.net/hprofile-ak-snc4/274116_100002309665030_2076765_n.jpg" height=100>
 				</div>
 				<!-- line1 -->
 				<div class="row-fluid">
@@ -71,12 +71,12 @@
 					<div class="span5">
 						<div class="well">
 							<h2>アプリケーション</h2>
-							<ul>
-								<li><a href="http://app.hixi-hyi.com/wordcount/">twiwc</a> </li>
-								<li><a href="ihttps://github.com/hixi-hyi/ppopupmenu">ppopupmenu</a> <br/ > [<a href="http://www.amazon.co.jp/dp/4274211746">ARプログラミングProcessingでつくる拡張現実感のレシピ</a> 掲載]</li>
-								<li><a href="http://www.youtube.com/watch?v=4SQ9mmuzttA">こまったー</a> <br/ >[<a href="http://info.cookpad.com/24contest2">第2回 開発コンテスト24</a>] 
+							<h3><a href="http://app.hixi-hyi.com/wordcount/">twiwc</a> </h3>
+							<h3><a href="ihttps://github.com/hixi-hyi/ppopupmenu">ppopupmenu</h3> 
+								<p> <a href="http://www.amazon.co.jp/dp/4274211746">ARプログラミングProcessingでつくる拡張現実感のレシピ</a></p>
+								<h3><a href="http://www.youtube.com/watch?v=4SQ9mmuzttA">こまったー</a> </h3>
+								<p> <a href="http://info.cookpad.com/24contest2">第2回 開発コンテスト24</a> </p>
 							</ul>
-
 						</div>
 					</div>
 					<div class="span5">
@@ -87,6 +87,24 @@
 								<li>(大学院) 光学シースルー方式HMDとマーカレス画像認識による高可搬性実世界志向インターフェース</li>
 							</ul>
 
+						</div>
+					</div>
+				</div>
+
+				<div class="row-fluid">
+					<div class="span5">
+						<div class="well">
+							<h2>ハッカソン♪</h2>
+							<h3>期待すること</h3>
+							<p>・ゆるい集まり．こいつはこんなこと出来るんだーみたいな感じをわかりたいな</p>
+							<h3>参加の動機</h3>
+							<p>・みんなの実力が知りたかった！</p>
+							<h3>作りたいもの</h3>
+							<p>・開発者向けライブラリとか作ってみんなに使われるものを！！！</p>
+						</div>
+					</div>
+					<div class="span5">
+						<div class="well">
 						</div>
 					</div>
 				</div>
